<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThreePointChess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ctn">继   续</string>
    <string name="new_game">新游戏</string>
    <string name="exit">退   出</string>
    <string name="game_name">三子棋</string>
    <string name="level_setting">难度等级</string>
    <string name="turn_setting">先后手</string>
    <string name="music_setting">音效</string>
    <string name="easy">初级</string>
    <string name="hard">高级</string>
    <string name="first">先手</string>
    <string name="last">后手</string>
    <string name="open">开启音效</string>
    <string name="close">关闭音效</string>
    <string name="setting">游戏设置</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="main_menu">主菜单</string>
    <string name="botton_setting">设置</string>
    <string name="restart">重置</string>
    <string name="hint">提示</string>
    <string name="success">恭喜，你已经获得胜利</string>
    <string name="lose">你输了，再接再厉！</string>
    <string name="dogfall">是平局，不给力啊</string>
    <string name="title_activity_start">三子棋</string>

</resources>
