<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/level_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/level_radio"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/easy_button"
            android:text="@string/easy"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/hard_button"
            android:text="@string/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </RadioGroup>
    <TextView
        android:text="@string/turn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/turn_radio"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/first_button"
            android:text="@string/first"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/last_button"
            android:text="@string/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </RadioGroup>
    <TextView
        android:text="@string/music_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/music_radio"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/open_button"
            android:text="@string/open"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/close_button"
            android:text="@string/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </RadioGroup>
</LinearLayout>