<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weixiaokang.threepointchess.GameActivity">
    <RelativeLayout
        android:id="@+id/rel_layout"

        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/button4"
            android:layout_centerInParent="true"
            style="@style/GameButton"/>

        <Button
            android:id="@+id/button3"
            android:layout_alignTop="@id/button4"
            android:layout_toLeftOf="@id/button4"
            android:layout_toStartOf="@id/button4"
            style="@style/GameButton" />
        <Button
            android:id="@+id/button0"
            android:layout_alignLeft="@id/button3"
            android:layout_above="@id/button3"
            android:layout_alignStart="@id/button3"
            style="@style/GameButton" />
        <Button
            android:id="@+id/button1"
            android:layout_toRightOf="@id/button0"
            android:layout_toEndOf="@id/button0"
            android:layout_alignBottom="@id/button0"
            style="@style/GameButton"/>
        <Button
            android:id="@+id/button2"
            android:layout_toRightOf="@id/button1"
            android:layout_alignTop="@id/button1"
            android:layout_toEndOf="@id/button1"
            style="@style/GameButton" />
        <Button
            android:id="@+id/button5"
            android:layout_toRightOf="@id/button4"
            android:layout_toEndOf="@id/button4"
            android:layout_below="@id/button2"
            style="@style/GameButton" />
        <Button
            android:id="@+id/button8"
            android:layout_below="@id/button5"
            android:layout_alignLeft="@id/button5"
            android:layout_alignStart="@id/button5"
            style="@style/GameButton" />
        <Button
            android:id="@+id/button7"
            android:layout_below="@id/button4"
            android:layout_alignLeft="@id/button4"
            android:layout_alignStart="@id/button4"
            style="@style/GameButton" />
        <Button
            android:id="@+id/button6"
            android:layout_toLeftOf="@id/button7"
            android:layout_alignTop="@id/button7"
            android:layout_toStartOf="@id/button7"
            style="@style/GameButton" />
    </RelativeLayout>
    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/restart"
            android:text="@string/restart"
            style="@style/BottomButton"/>
        <Button
            android:id="@+id/botton_setting"
            android:text="@string/botton_setting"
            style="@style/BottomButton" />
        <Button
            android:id="@+id/main_menu"
            android:text="@string/main_menu"
            style="@style/BottomButton" />
    </LinearLayout>

</LinearLayout>